--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <dd>Arthropoda</dd>
       <dt>Class</dt>
       <dd>Insecta</dd>
-      <dt>Order<dt>
+      <dt>Order</dt>
       <dd>Coleoptera</dd>
       <dt>Suborder</dt>
       <dd>Polyphaga</dd>
