--- a/index.html
+++ b/index.html
@@ -11,22 +11,30 @@
   <a class="link-card" href="https://en.wikipedia.org/wiki/Dung_beetle">
     <h2>Dung Beetle</h2>
     <p>Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.</p>
-    <dl>
-      <dt>Kingdom</dt>
-      <dd>Animalia</dd>
-      <dt>Phylum</dt>
-      <dd>Arthropoda</dd>
-      <dt>Class</dt>
-      <dd>Insecta</dd>
-      <dt>Order</dt>
-      <dd>Coleoptera</dd>
-      <dt>Suborder</dt>
-      <dd>Polyphaga</dd>
-      <dt>Superfamily</dt>
-      <dd>Scarabaeoidea</dd>
-      <dt>Family</dt>
-      <dd>Scarabidae</dd>
-    </dl>
+    <div class="lists">
+      <span class="list">
+        <ol>
+        <li>Kingdom</li>
+        <li>Phylum</li>
+        <li>Class</li>
+        <li>Order</li>
+        <li>Suborder</li>
+        <li>Superfamily</li>
+        <li>Family</li>
+        </ol>
+      </span>
+      <span class="list2">
+          <ol>
+          <li>Animalia</li>
+          <li>Arthropoda</li>
+          <li>Insecta</li>
+          <li>Coleoptera</li>
+          <li>Polyphaga</li>
+          <li>Scarabaeoidea</li>
+          <li>Scarabidae</li>
+          </ol>
+        </span>
+      </div>
     <div class="btn-wrap">
       <span class="btn">Learn more…</span>
     </div>
